DIO-ETL_COM_PYTHON

--- a/202110-DIO-Tratamento_ETL/projeto.ipynb
+++ b/202110-DIO-Tratamento_ETL/projeto.ipynb
@@ -4,12 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# DIO: Fundamentos de ETL com Python - Intermediário - 5 horas\n",
+    "# DIO: Fundamentos de ETL com Python - Básico - 5 horas\n",
     "\n",
     "Aprenda sobre o processo de Extract Transform and Load (ETL) e como transformar seus dados e deixá-los prontos para seus projetos.\n",
     "\n",
-    "- **Disponível em:** <a href=\"https://web.digitalinnovation.one/course/fundamentos-de-etl-com-python/learning/ddec4a4a-3912-49b3-b368-36518802b9eb?back=/track/banco-carrefour-data-engineer\" target=_blank>DigitalInnovationOne</a> | <a href=\"https://drive.google.com/drive/folders/1ldrsSLnFUG0Cf2JLYsI1IHn5gU5MxrJw\" target=\"_blank\">Slides</a> | <a href=\"https://github.com/ftiosso/dio-curso-etl\" target=\"_blank\">GitHUB</a>\n",
-    "- **Professor:** Fernando Tiosso"
+    "- **Curso disponível em:** <a href=\"https://web.digitalinnovation.one/course/fundamentos-de-etl-com-python/learning/ddec4a4a-3912-49b3-b368-36518802b9eb?back=/track/banco-carrefour-data-engineer\" target=_blank>DigitalInnovationOne</a> | <a href=\"https://drive.google.com/drive/folders/1ldrsSLnFUG0Cf2JLYsI1IHn5gU5MxrJw\" target=\"_blank\">Slides</a> | <a href=\"https://github.com/ftiosso/dio-curso-etl\" target=\"_blank\">GitHUB</a>\n",
+    "- **Professor:** Fernando Tiosso \n",
+    "<a href=\"https://www.linkedin.com/in/fernando-tiosso-2139542/\" target=\"_blank\">Linkedin</a> | \n",
+    "<a href=\"https://github.com/ftiosso/\" target=\"_blank\">GitHUB</a>"
    ]
   },
   {
@@ -18,7 +20,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "#BIBLIOTECAS UTILIZADAS\n",
+    "import pandas as pd\n",
+    "import pandera as pa"
    ]
   },
   {
@@ -10242,10 +10246,10 @@
     "## 5. Considerações Finais\n",
     "\n",
     "Links importantes:\n",
-    "- Leitura de arquivos csv (read_csv)\n",
-    "- Validação Pandera\n",
-    "- Limpeza Valores Ausentes\n",
-    "- Transformação Variações de filtros (tempo de execução)"
+    "- <a href=\"\thttps://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.read_csv.html\" target=\"_blank\">Leitura de arquivos csv (read_csv)</a>\n",
+    "- <a href=\"https://pandera.readthedocs.io/en/stable/\" target=\"_blank\">Validação Pandera</a>\n",
+    "- <a href=\"https://pandas.pydata.org/pandas-docs/stable/user_guide/missing_data.html\" target=\"_blank\">Limpeza Valores Ausentes</a>\n",
+    "- <a href=\"https://medium.com/data-hackers/a-maneira-eficiente-de-filtrar-um-data-frame-pandas-4158a4e37c10\" target=\"_blank\">Transformação Variações de filtros (tempo de execução)</a>"
    ]
   },
   {
