--- a/202201-ALURA-Formacao_Python_para_Data_Science/202203-ALURA-08_09-Corretor_ortografico_em_python-Aplicanto_tecnicas_de_NLP/nlp.ipynb
+++ b/202201-ALURA-Formacao_Python_para_Data_Science/202203-ALURA-08_09-Corretor_ortografico_em_python-Aplicanto_tecnicas_de_NLP/nlp.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Corretor Ortográfico: Aplicando técnicas de NLP\n",
     "__Professor:__ Thiago G. Santos<br>\n",
-    "__Disponível:__ <a href=\"https://cursos.alura.com.br/course/nlp-corretor-ortografico\" target=blank>ALURA</a>\n",
+    "__Disponível:__ <a href=\"https://cursos.alura.com.br/course/nlp-corretor-ortografico\" target=blank>ALURA</a><br>\n",
     "__Conteúdo:__<br>\n",
     "- Aprenda conceitos fundamentais do processamento de linguagem natural.\n",
     "- Saiba o que está por trás dos corretores ortográficos (spell checker).\n",
