--- a/202201-ALURA-Formacao_Python_para_Data_Science/202204-ALURA-09_09-Scraping_com_python-Coleta_de_dado_na_web/scraping.ipynb
+++ b/202201-ALURA-Formacao_Python_para_Data_Science/202204-ALURA-09_09-Scraping_com_python-Coleta_de_dado_na_web/scraping.ipynb
@@ -4,331 +4,400 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Corretor Ortográfico: Aplicando técnicas de NLP\n",
-    "__Professor:__ Thiago G. Santos<br>\n",
-    "__Disponível:__ <a href=\"\" target=blank>ALURA</a>"
+    "# Scraping com Python: Coleta de dados na web<br>\n",
+    "__Professor:__ Rodrigo Fernando Dias<br>\n",
+    "__Disponível em:__ <a href=\"https://cursos.alura.com.br/course/web-scraping-data-science-python\" target=\"blank\">ALURA</a><br>\n",
+    "__Conteúdo:__<br>\n",
+    "- Aprenda como obter o HTML de uma página e extrair informações;\n",
+    "- Use o BeautifulSoup e Python para coletar dados;\n",
+    "- Conheça os métodos mais importantes para pesquisar e navegar no HTML;\n",
+    "- Acesse o conteúdo e atributos das tags HTML;\n",
+    "- Construa um dataframe a partir dos dados;"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 01. Explorando um projeto de NLP"
+    "## 01. Nosso primeiro scraping"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Explorando o problema"
+    "### Ambiente e bibliotecas"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Importando um corpus textual"
+    "### Um pouco sobre Anaconda e Python"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Tokenização"
+    "### Meu primeiro scraping"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercício: Token - O que são?"
+    "### Hello World"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 02. Utilizando NLTK para tokenizar um texto"
+    "## 02. Obtendo e limpando o HTML"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Refinando a tokenização"
+    "### Entendo a web"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercicio: separando uma frase"
+    "### Recapitulando o que vimos"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Separando palavras de tokens"
+    "### Obtendo o conteúdo HTML de um site"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Contando palavras do Corpus"
+    "### Acessando páginas com urlib.request"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Normalização"
+    "### Tratamento de strings"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Tipos de palavras"
+    "### Extraindo informações de strings"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercício: Separando apenas palavras"
+    "## 03. Introdução ao BeautifulSoup"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 03. Desenvolvendo e testando o corretor"
+    "### HTML da nossa página"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Detalhando o corretor"
+    "### As tags de um documento HTML"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Fatiando strings"
+    "### Criando um objeto BeautifulSoup"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Operação de inserção"
+    "### Utilizando o BeautfulSoup"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercício: Generalizando o corretor"
+    "### Acessando tags"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Construíndo a função corretor"
+    "### Varrendo um documento HTML"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Probabilidade das palavras geradas"
+    "### Acessando o conteúdo das tags"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercício> Adicionando uma nova letra"
+    "### Um pouco mais sobre o método get_text()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 04. Avaliando a qualidade do corretor"
+    "### Acessando os atributos de uma tag"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Preparando dados de teste"
+    "### Formas de acessar os atributos de uma tag"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Avaliando o corretor"
+    "## 04. Pesquisando com BeautifulSoup"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercício: Avaliando o corretor"
+    "### Os métodos find() e findAll()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 05. Incrementando o corretor"
+    "### Navegando por arquivos HTML"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Operação de delete"
+    "### Utilizando os métodos find() e findAll()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Implementando o delete de caracteres"
+    "### Outros métodos de pesquisa"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercícios: Deletando caracteres"
+    "### Um pouco mais sobre os métodos de pesquisa do BeautifulSoup"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Avaliando o novo corretor"
+    "## 05. Capturando dados do anúncio"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercício: Erros do correotor"
+    "### Idenficando e selecionando os dados no HTML"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 06. Corrigindo os principais erros de digitação"
+    "### Procedimento de scraping"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Trocando as letras"
+    "### Obtendo o valor do veículo anunciado"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Implentando a troca de letras"
+    "### Trabalhando com dicionários python"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercício: Trocando as letras"
+    "### Obtendo as informações sobre o veículo anunciado"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Invertendo as letras"
+    "### Técnicas de pesquisa"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Codando a inversão de letras"
+    "### Obtendo os acessórios do veículo anunciado"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 07. Criando um corretor turbinado"
+    "### Trabalhando com listas"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Palavras desconhecidas ao vocabulário"
+    "### Criando um Dataframe"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Turbinando o gerador de palavras"
+    "### Dataframe com pandas"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Escolhendo os melhores candidatos"
+    "### Obtendo a foto do anúncio"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercício: Distância entre palavras"
+    "### Download de arquivos"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 08. Avaliando e interpretando o erro do corretor turbinado"
+    "## 06. Web Scraping da página inteira"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Avaliando o resultado dos dois corretores"
+    "### Identificando as informações no HTML"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Avaliando o resultado dos dois corretores cont"
+    "### Métodos do BeautifulSoup"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercício: Erros do corretor turbinado"
+    "### Criando uma rotina de scraping"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Iterando por tags e acessando atributos"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 07. Dados do site inteiro"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Identificando as informações no HTML"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Retirando informações das informações"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Criando um rotina de scraping"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Recordando um pouco"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Consolidando o seu conhecimnento"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Projeto do curso"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### O que aprendemos"
    ]
   },
   {
@@ -339,16 +408,16 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "7bf4cbbe7418c4c5904c81a1f330c06b14f1c71217d7fe69c29f2d1792cbbe13"
+   "hash": "0cc7a30033cd0d988502a11126f55a255d06f4b4da1e8a113ebe0be61e1d5757"
   },
   "kernelspec": {
-   "display_name": "Python 3.10.0 ('env_cursos')",
+   "display_name": "Python 3.9.7 ('env_cursos')",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "name": "python",
-   "version": "3.10.0"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4
  },
