--- a/202201-ALURA-Formacao_Python_para_Data_Science/202204-ALURA-09_09-Scraping_com_python-Coleta_de_dado_na_web/scraping.ipynb
+++ b/202201-ALURA-Formacao_Python_para_Data_Science/202204-ALURA-09_09-Scraping_com_python-Coleta_de_dado_na_web/scraping.ipynb
@@ -19,7 +19,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 01. Nosso primeiro scraping"
+    "## 01. Nosso primeiro scraping\n",
+    "*Web Scraping* é o termo utilizado para definir a prática de coletar automaticamente informações na Internet. Isto é feito, geralmente, por meio de programas que simulam a navegação humana na Web."
    ]
   },
   {
@@ -30,10 +31,49 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BeautifulSoup -> 4.10.0\n",
+      "urllib -> 3.9\n",
+      "pandas -> 1.4.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "import bs4\n",
+    "import urllib.request as urllib_request\n",
+    "import pandas\n",
+    "\n",
+    "print(\"BeautifulSoup ->\", bs4.__version__)\n",
+    "print(\"urllib ->\", urllib_request.__version__)\n",
+    "print(\"pandas ->\", pandas.__version__)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Um pouco sobre Anaconda e Python"
+    "### Exercício: Um pouco sobre Anaconda e Python\n",
+    "Sobre o Anaconda e Python, assinale as alternativas corretas."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "__a) A distribuição Anaconda é uma plataforma desenvolvida para facilitar a elaboração de projetos em data science, utilizando a linguagem Python.__<br>\n",
+    "_Alternativa correta! Podemos verificar isto no próprio site da distribuição Anaconda: https://www.anaconda.com/._<br>\n",
+    "__b) Uma das formas de se verificar a versão de uma biblioteca Python é com o atributo __version____<br>\n",
+    "_Alternativa correta! Em nosso notebook, temos um exemplo da utilização deste recurso._<br>\n",
+    "c) A única forma de se desenvolver projetos em data science é através da distribuição Anaconda<br>\n",
+    "d) Uma das formas de se verificar a versão de uma biblioteca Python é com o método version()"
    ]
   },
   {
@@ -44,10 +84,252 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Importando bibliotecas\n",
+    "from urllib.request import urlopen\n",
+    "from bs4 import BeautifulSoup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "b'<!DOCTYPE html>\\r\\n<html lang=\"pt-br\">\\r\\n<head>\\r\\n    <meta charset=\"utf-8\">\\r\\n    <meta name=\"viewport\" content=\"width=device-width, initial-scale=1, shrink-to-fit=no\">\\r\\n\\r\\n    <title>Alura Motors</title>\\r\\n\\t<link rel=\"stylesheet\" href=\"https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css\" integrity=\"sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u\" crossorigin=\"anonymous\">\\r\\n\\t<link rel=\"stylesheet\" href=\"css/styles.css\" media=\"all\">\\r\\n\\r\\n\\t<script src=\"https://code.jquery.com/jquery-1.12.4.js\"></script>\\r\\n\\t<script src=\"https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js\" integrity=\"sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa\" crossorigin=\"anonymous\"></script>\\r\\n\\t<script type=\"text/javascript\" src=\"js/index.js\"></script>\\r\\n\\r\\n</head>\\r\\n<body cz-shortcut-listen=\"true\">\\r\\n    <noscript>You need to enable JavaScript to run this app.</noscript>\\r\\n\\r\\n    <div id=\"root\">\\r\\n        <header>\\r\\n            <nav class=\"navbar navbar-inverse\" style=\"margin-bottom: 0;\">\\r\\n                <div class=\"container\" style=\"margin-bottom: -20px;\">\\r\\n                    <div class=\"navbar\">\\r\\n                        <a href=\"./index.php\" class=\"navbar-brand\" title=\"Alura Motors\">\\r\\n                            <img src=\"img/alura-logo.svg\" class=\"d-inline-block align-top\" alt=\"Alura\">Motors\\r\\n                        </a>\\r\\n                        <ul class=\"nav navbar-nav\" style=\"margin-top: 35px;\">\\r\\n                            <li><a href=\"./hello-world.php\">Hello World</a></li>\\r\\n                            <li><a href=\"./index.php\">An\\xc3\\xbancios</a></li>\\r\\n                        </ul>\\r\\n                    </div>\\r\\n                </div>\\r\\n            </nav>\\r\\n        </header>\\r\\n\\r\\n\\t\\t<div class=\"container\">\\r\\n\\t\\t\\t<h1 class=\"sub-header\">Curso de Web Scraping</h1>\\r\\n\\t\\t\\t<div class=\"row\">\\r\\n\\t\\t\\t\\t<div class=\"col-md-12\">\\r\\n\\t\\t\\t\\t\\t<div class=\"container\" style=\"width: 100%;\">\\r\\n                <h1 id=\"hello-world\">Hello World!!!</h1>\\r\\n                <p class=\"definition\"><b>Web Scraping</b> \\xc3\\xa9 o termo utilizado para definir a pr\\xc3\\xa1tica de coletar automaticamente informa\\xc3\\xa7\\xc3\\xb5es na Internet. Isto \\xc3\\xa9 feito, geralmente, por meio de programas que simulam a navega\\xc3\\xa7\\xc3\\xa3o humana na Web.</p>\\r\\n\\t\\t\\t\\t\\t</div>\\r\\n\\t\\t\\t\\t</div>\\r\\n\\t\\t\\t</div>\\r\\n\\t\\t</div>\\r\\n\\r\\n\\t\\t<footer id=\"footer\">\\r\\n\\t\\t\\t<nav class=\"navbar navbar-inverse\">\\r\\n\\t\\t\\t\\t<div class=\"container\" style=\"margin-bottom: 10px;\">\\r\\n\\t\\t\\t\\t\\t<div class=\"navbar\">\\r\\n\\t\\t\\t\\t\\t\\t<a href=\"./index.php\" class=\"navbar-brand\" title=\"Alura Motors\">\\r\\n\\t\\t\\t\\t\\t\\t\\t<img src=\"img/alura-logo.svg\" class=\"d-inline-block align-top\" alt=\"Alura\">Motors\\r\\n\\t\\t\\t\\t\\t\\t</a>\\r\\n\\t\\t\\t\\t\\t\\t<p style=\"color: #fff; text-align: center; margin-top: 40px;\">Aplica\\xc3\\xa7\\xc3\\xa3o para treinamento de web scraping</p>\\r\\n\\t\\t\\t\\t\\t</div>\\r\\n\\t\\t\\t\\t</div>\\r\\n\\t\\t\\t</nav>\\r\\n   </footer>\\r\\n\\r\\n\\t</div>\\r\\n\\r\\n</body>\\r\\n</html>\\r\\n'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "url = 'https://alura-site-scraping.herokuapp.com/hello-world.php'\n",
+    "\n",
+    "# Abrindo a url\n",
+    "response = urlopen(url)\n",
+    "# Lendo o conteúdo da url\n",
+    "html = response.read()\n",
+    "html\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<!DOCTYPE html>\n",
+       "\n",
+       "<html lang=\"pt-br\">\n",
+       "<head>\n",
+       "<meta charset=\"utf-8\"/>\n",
+       "<meta content=\"width=device-width, initial-scale=1, shrink-to-fit=no\" name=\"viewport\"/>\n",
+       "<title>Alura Motors</title>\n",
+       "<link crossorigin=\"anonymous\" href=\"https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css\" integrity=\"sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u\" rel=\"stylesheet\"/>\n",
+       "<link href=\"css/styles.css\" media=\"all\" rel=\"stylesheet\"/>\n",
+       "<script src=\"https://code.jquery.com/jquery-1.12.4.js\"></script>\n",
+       "<script crossorigin=\"anonymous\" integrity=\"sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa\" src=\"https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js\"></script>\n",
+       "<script src=\"js/index.js\" type=\"text/javascript\"></script>\n",
+       "</head>\n",
+       "<body cz-shortcut-listen=\"true\">\n",
+       "<noscript>You need to enable JavaScript to run this app.</noscript>\n",
+       "<div id=\"root\">\n",
+       "<header>\n",
+       "<nav class=\"navbar navbar-inverse\" style=\"margin-bottom: 0;\">\n",
+       "<div class=\"container\" style=\"margin-bottom: -20px;\">\n",
+       "<div class=\"navbar\">\n",
+       "<a class=\"navbar-brand\" href=\"./index.php\" title=\"Alura Motors\">\n",
+       "<img alt=\"Alura\" class=\"d-inline-block align-top\" src=\"img/alura-logo.svg\"/>Motors\n",
+       "                        </a>\n",
+       "<ul class=\"nav navbar-nav\" style=\"margin-top: 35px;\">\n",
+       "<li><a href=\"./hello-world.php\">Hello World</a></li>\n",
+       "<li><a href=\"./index.php\">Anúncios</a></li>\n",
+       "</ul>\n",
+       "</div>\n",
+       "</div>\n",
+       "</nav>\n",
+       "</header>\n",
+       "<div class=\"container\">\n",
+       "<h1 class=\"sub-header\">Curso de Web Scraping</h1>\n",
+       "<div class=\"row\">\n",
+       "<div class=\"col-md-12\">\n",
+       "<div class=\"container\" style=\"width: 100%;\">\n",
+       "<h1 id=\"hello-world\">Hello World!!!</h1>\n",
+       "<p class=\"definition\"><b>Web Scraping</b> é o termo utilizado para definir a prática de coletar automaticamente informações na Internet. Isto é feito, geralmente, por meio de programas que simulam a navegação humana na Web.</p>\n",
+       "</div>\n",
+       "</div>\n",
+       "</div>\n",
+       "</div>\n",
+       "<footer id=\"footer\">\n",
+       "<nav class=\"navbar navbar-inverse\">\n",
+       "<div class=\"container\" style=\"margin-bottom: 10px;\">\n",
+       "<div class=\"navbar\">\n",
+       "<a class=\"navbar-brand\" href=\"./index.php\" title=\"Alura Motors\">\n",
+       "<img alt=\"Alura\" class=\"d-inline-block align-top\" src=\"img/alura-logo.svg\"/>Motors\n",
+       "\t\t\t\t\t\t</a>\n",
+       "<p style=\"color: #fff; text-align: center; margin-top: 40px;\">Aplicação para treinamento de web scraping</p>\n",
+       "</div>\n",
+       "</div>\n",
+       "</nav>\n",
+       "</footer>\n",
+       "</div>\n",
+       "</body>\n",
+       "</html>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Crinando um objeto BeautifulSoup\n",
+    "soup = BeautifulSoup(html,'html.parser')\n",
+    "soup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<h1 id=\"hello-world\">Hello World!!!</h1>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Acessando uma tag html\n",
+    "soup.find('h1',id='hello-world')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hello World!!!'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Acessando apenas o conteúdo da tag\n",
+    "soup.find('h1',id='hello-world').get_text()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<p class=\"definition\"><b>Web Scraping</b> é o termo utilizado para definir a prática de coletar automaticamente informações na Internet. Isto é feito, geralmente, por meio de programas que simulam a navegação humana na Web.</p>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "soup.find('p')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Web Scraping é o termo utilizado para definir a prática de coletar automaticamente informações na Internet. Isto é feito, geralmente, por meio de programas que simulam a navegação humana na Web.'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "soup.find('p').get_text()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Hello World"
+    "### Exercício: Hello World\n",
+    "Continuando o raciocínio da último vídeo e utilizando o nosso site Alura Motors, analise o código abaixo:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Curso de Web Scraping'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "from urllib.request import urlopen\n",
+    "from bs4 import BeautifulSoup\n",
+    "\n",
+    "url = 'https://alura-site-scraping.herokuapp.com/hello-world.php'\n",
+    "\n",
+    "response = urlopen(url)\n",
+    "html = response.read()\n",
+    "\n",
+    "soup = BeautifulSoup(html, 'html.parser')\n",
+    "\n",
+    "soup.find('h1', {'class': 'sub-header'}).get_text()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Qual será o seu output?<br>\n",
+    "__Dica:__ utilize um notebook para testar o código acima e também a ferramenta do desenvolvedor (F12) do Google Chrome.<br>\n",
+    "__a) 'Curso de Web Scraping'__<br>\n",
+    "_Alternativa correta! Note que, neste código, utilizamos uma forma alternativa de passar os atributos de uma tag para o método find() ({'class': 'sub-header'}). Nos próximos vídeos, vamos entender melhor como este e outros métodos do BeautifulSoup funcionam._<br>\n",
+    "b) 'Web Scraping'<br>\n",
+    "c) 'Hello World!!!'<br>\n",
+    "d) 'Web Scraping é o termo utilizado para definir a prática de coletar automaticamente informações na Internet. Isto é feito, geralmente, por meio de programas que simulam a navegação humana na Web.'"
    ]
   },
   {
@@ -416,7 +698,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.9.7"
   },
   "orig_nbformat": 4
