--- a/2021_07_12-UNIVESP-Introducao_Ciencia_de_Dados/semana4-descoberta_preparacao_dados.ipynb
+++ b/2021_07_12-UNIVESP-Introducao_Ciencia_de_Dados/semana4-descoberta_preparacao_dados.ipynb
@@ -193,34 +193,33 @@
     "- __Dados unidimensionais (univariados)__ são dados nos quais você __tem apenas uma coleção de números__, por exemplo a temperatura de pessoas de uma ala (como na tabela do slide anterior), a quantidade de gols que seu time fez por jogo no campeonato ou a média de minutos diários que você usa olhando seu instagram;\n",
     "  - _Um primeiro passo inevitável é computar alguma estatística, saber o dia que gastou mais minutos no instagram, que gastou menos, a média de minutos, a soma deles_.\n",
     "- __Dados multidimensionais (multivariados)__ são dados ques possam __ter mais de uma dimensão__, por exemplo o sexo, a idade, o peso (como na tabela já vista), os gols feitos e os gols sofridos pelo seu time, ou então a quantidade de minutos no instagram e também a quantidade de posts realizados.\n",
-    "  - _Em muitos casos é importante conhecer cada dimensão individualmente, mas também é necessário dispersar os dados e entender a relação entre eles, se elas existirem_."
+    "  - _Em muitos casos é importante conhecer cada dimensão individualmente, mas também é necessário dispersar os dados e entender a relação entre eles, se elas existirem_.\n",
+    "\n",
+    "  \n",
+    "**_Obs: Às vezes vai escutar que um dado é escalar (dado único, unidimensional), que representa um dado que não é um array (vetor ou matriz) ou objeto (dict)._**"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Tipo:\n",
-    "- Define se o atributo representa quantidades, sendo então chamado de quantitativo ou numérico, ou qualidades, quando é chamado de qualitativo, simbólico ou categórico, pois os valores podem ser associados às categorias.\n",
-    "Dados qualitativos: Eles podem ter seus valores ordenados, mas nunca podem receber operações aritméticas.\n",
-    "Dados quantitativos são valores numéricos, que podem ser ordenados e usados em operações aritméticas.\n",
-    "Obs: Às vezes vai escutar que um dado é escalar (dado único), que representa um dado que não é um array (vetor ou matriz) ou objeto (dict).\n",
-    "<br><br>\n",
-    "- As __variáveis quantitativas__ podem ser __contínuas ou discretas__.\n",
-    "  - _Variáveis discretas_: normalmente são representadas por valores que contêm um _número finito ou infinito contável de valores_. Casos de atributos contáveis.\n",
-    "    - _valores (0/1), idade, número de peças com defeito_\n",
-    "  - _Variáveis contínuas_: normalmente são representadas por valores que podem assumir um _número infinito de valores_. Geralmente _resultados de medidas (por instrumento)_;\n",
-    "    - _peso, tamanho, distância_\n",
-    "  - _Variáveis intervalares_: valores dentro de um intervalo, sem zero absoluto.\n",
-    "    - _temperatura, datas de um calendário_\n",
-    "  - _Variáveis racionais_: com zero absoluto. \n",
-    "    - _quantidade de vezes que uma pessoa foi ao hospital (o zero é parâmetro)_\n",
-    "<br><br>\n",
-    "- As __variáveis qualitativas__ podem ser __nominais ou ordinais__.\n",
-    "  - _Variáveis nominais_: os valores _são nomes diferentes_, _carregando a menor quantidade de informação possível. Não existe relação de ordem entre seus valores_.\n",
-    "    - _CPF, RG, cor dos olhos, sexo_\n",
-    "  - _Variáveis ordinais_: os valores refletem uma _ordem das categorias representadas_, desta forma _operadores de comparação (maior, menor) podem ser utilizados_.\n",
-    "    - _escolaridade, patente militar, classificação no campeonato_\n"
+    "#### Tipo de variáveis:\n",
+    "- **Dados qualitativos:** Dados que representam qualidades, é chamado de qualitativo, simbólico ou categórico. Os valores podem ser associados às categorias. Podem ter seus valores ordenados, mas nunca podem receber operações aritméticas.\n",
+    "  - As __variáveis qualitativas__ podem ser __nominais ou ordinais__.\n",
+    "    - _Variáveis nominais_: os valores _são nomes diferentes_, _carregando a menor quantidade de informação possível. Não existe relação de ordem entre seus valores_.\n",
+    "      - _CPF, RG, cor dos olhos, sexo_\n",
+    "    - _Variáveis ordinais_: os valores refletem uma _ordem das categorias representadas_, desta forma _operadores de comparação (maior, menor) podem ser utilizados_.\n",
+    "      - _escolaridade, patente militar, classificação no campeonato_\n",
+    "- **Dados quantitativos:** Dados que representam quantidades, sendo então chamado de quantitativo ou numérico. São valores numéricos, que podem ser ordenados e usados em operações aritméticas.\n",
+    "  - As __variáveis quantitativas__ podem ser __contínuas ou discretas__.\n",
+    "    - _Variáveis discretas_: normalmente são representadas por valores que contêm um _número finito ou infinito contável de valores_. Casos de atributos contáveis.\n",
+    "      - _valores (0/1), idade, número de peças com defeito_\n",
+    "    - _Variáveis contínuas_: normalmente são representadas por valores que podem assumir um _número infinito de valores_. Geralmente _resultados de medidas (por instrumento)_;\n",
+    "      - _peso, tamanho, distância_\n",
+    "    - _Variáveis intervalares_: valores dentro de um intervalo, sem zero absoluto.\n",
+    "      - _temperatura, datas de um calendário_\n",
+    "    - _Variáveis racionais_: com zero absoluto. \n",
+    "      - _quantidade de vezes que uma pessoa foi ao hospital (o zero é parâmetro)_"
    ]
   },
   {
